--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "github-actions" # See documentation for possible values
+  - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
-    schedule:
-      interval: "weekly"
-      - package-ecosystem: "npm"
-    directory: "/"
     schedule:
       interval: "weekly"
