--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-server": "^17.3.1",
     "@angular/router": "^17.3.1",
     "@angular/ssr": "^17.2.3",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -39,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "schematics-scss-migrate": "^2.3.17",
     "typescript": "~5.3.2"
   }
 }
